<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="Param" Id="{f6c65ed6-60b1-4e4f-9018-72463d4ace48}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	MAX_DOMAIN : UDINT := 100;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>