<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="_RegisterDomain" Id="{2611a406-ac45-4bee-92de-3ce40a323276}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION INTERNAL _RegisterDomain : Results.Result
VAR_INPUT
	iDomain			: I_DomainInternal;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF iDomain = 0 THEN
	Debug.DebugMsg(0, Tc2_Standard.CONCAT(__POUNAME(), 'iDomain = 0!'));
	_RegisterDomain := Results.Err.Itf0;
	RETURN;
END_IF

IF iDomain.IsRegistered THEN
	Debug.DebugMsg(iDomain, Tc2_Standard.CONCAT(__POUNAME(), 'iDomain is already registered!'));
	_RegisterDomain := Results.Err.Itf0;
	RETURN;
END_IF

IF _Register.nLen = Param.MAX_DOMAIN THEN
	Debug.DebugMsg(iDomain, Tc2_Standard.CONCAT(__POUNAME(), 'Overflow!'));
	_RegisterDomain := Results.Err.Ovf;
	RETURN;
END_IF

_Register.nLen := _Register.nLen + 1;
_Register.iDomain[_Register.nLen] := iDomain;
_RegisterDomain := Results.Ok;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>